# rusty-paintings

./: Cargo.toml
src/: app.rs  lib.rs  main.rs  renderer.rs
src/renderer/: form.rs  layer.rs  mod.rs  shade.rs  sketch.rs
