[package]
name = "paintings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
winit = "0.26"
env_logger = "0.9"
log = "0.4"
wgpu = "0.12"
pollster = "0.2"
noise = "0.7"
rand = "0.8"
bytemuck = { version = "1.7", features = ["derive"] }
glam = { version = "0.20", features = ["bytemuck", "rand"] }
